[package]
name = "nftables-async"
version = "0.4.0"
edition = "2021"
description = "An async version of the helper to run nftables, providing full compatibility with the rest of the nftables crate"
license = "MIT"
keywords = ["nftables", "async"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/nftables-async"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nftables = "0.6.1"
serde_json = "1.0.140"
futures-util = { version = "0.3.31", default-features = false, features = [
    "io",
] }

tokio = { version = "1.44.1", default-features = false, features = [
    "process",
    "io-util",
], optional = true }
tokio-util = { version = "0.7.14", default-features = false, features = [
    "compat",
], optional = true }
async-process = { version = "2.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt"] }
async-io = "2.4.0"
fastrand = "2.3.0"
nftables-async = { path = ".", features = ["full"] }

[features]
default = []
full = ["tokio-driver", "async-process-driver"]
tokio-driver = ["dep:tokio", "dep:tokio-util"]
async-process-driver = ["dep:async-process"]
