[package]
name = "nftables-async"
version = "0.4.1"
edition = "2021"
description = "An async version of the helper to run nftables, providing full compatibility with the rest of the nftables crate"
license = "MIT"
keywords = ["nftables", "async"]
categories = ["network-programming"]
repository = "https://github.com/kanpov/nftables-async"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nftables = "0.6.3"
serde_json = "1.0.149"

tokio = { version = "1.52.3", default-features = false, features = [
    "process",
    "io-util",
], optional = true }
async-process = { version = "2.5.0", optional = true }
futures-lite = { version = "2.6.1", optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt"] }
async-io = "2.6.0"
fastrand = "2.4.1"
nftables-async = { path = ".", features = ["full"] }

[features]
default = []
full = ["tokio-driver", "async-process-driver"]
tokio-driver = ["dep:tokio"]
async-process-driver = ["dep:async-process", "dep:futures-lite"]
